syntax = "proto3";

package redpanda.api.dataplane.v1alpha;

import "buf/validate/validate.proto";

message ListUsersRequest {
  optional string name = 1;
}

enum SaslMechanism {
  SASL_MECHANISM_UNSPECIFIED = 0;
  SASL_MECHANISM_SCRAM_SHA_256 = 1;
  SASL_MECHANISM_SCRAM_SHA_512 = 2;
}

message ListUsersResponse {
  message User {
    string name = 1;
    optional SaslMechanism mechanism = 2;
  }
  repeated User users = 1;
}

message CreateUserRequest {
  string name = 1 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 128
  ];
  string password = 2 [
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 128
  ];
  SaslMechanism mechanism = 3;
}

message CreateUserResponse {
  string name = 1;
}

message UpdateUserRequest {
  string name = 1 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 128
  ];
  string password = 2 [
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 128
  ];
  SaslMechanism mechanism = 3;
}

message UpdateUserResponse {
  string name = 1;
}

message DeleteUserRequest {
  string name = 1 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 128
  ];
}

message DeleteUserResponse {}

service UserService {
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}
